--- a/style.css
+++ b/style.css
@@ -70,10 +70,23 @@ button{
 .us{
     margin: 10px 25px 0px 30px;
 }
-@media (max-width: 375px){
+@media screen and (max-width: 375px){
+    body{
+        width: 375px;
+    }
     .grid-container{
-        display: grid;
+        display: flex;
         flex-direction: column;
-        grid-template-rows: auto;
+        width: 300px;
+    }
+    .conteudo{
+        width: 300px;
+        height: 250px;
+    }
+    .conteudo > p{
+        width: 250px;
+    }
+    .attribution{
+        width: 375px;
     }
 }
