--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 body{
     background-color: hsl(204, 43%, 93%);
-    width: 680px;
-    margin: 50px 0px 0px 335px;
+}
+.fill{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 50px;
 }
 .grid-container{
     background-color: white;
     display: grid;
+    align-content: center;
     grid-template-columns: 50% 50%;
     grid-template-rows: 210px 250px;
     font-family: 'Karla', sans-serif;
@@ -67,30 +72,22 @@ button{
 .us{
     margin: 10px 25px 0px 30px;
 }
-@media screen and (max-width: 375px){
+@media screen and (max-width: 420px){
     body{
         width: 370px;
     }
     .grid-container{
         display: grid;
-        grid-template-columns: 375px;
-        grid-template-rows: 320px 300px 300px;
+        grid-template-columns: 420px;
+        grid-template-rows: 300px 300px 300px;
+        border-radius: 10px;
     }
     .conteudo{
        width: 370px;
        text-align: justify;
     }
-    .conteudo > p{
-        width: 250px;
-    }
-    .subscription{
-        border-radius: 0px;
-    }
     .why-content{
         grid-area: 3;
         border-radius: 0px 0px 8px 8px;
-    }
-    .attribution{
-        width: 300px;
     }
 }
